implement signIn() and signUp() endpoint
