# modern-api-book/converting_openapi_to_reactive_api_application/src/main/java/com/packt/modern/api/service/UserService.java
@@ -3,6 +3,9 @@ package com.packt.modern.api.service;
 import com.packt.modern.api.entity.AddressEntity;
 import com.packt.modern.api.entity.CardEntity;
 import com.packt.modern.api.entity.UserEntity;
+import com.packt.modern.api.model.RefreshToken;
+import com.packt.modern.api.model.SignInReq;
+import com.packt.modern.api.model.SignedInUser;
 import com.packt.modern.api.model.User;
 
 import reactor.core.publisher.Flux;
@@ -24,4 +27,16 @@ public interface UserService {
   UserEntity toEntity(User model);
 
   Mono<Void> deleteAddressOfCustomer(String customerId, String addressId);
+
+  Mono<UserEntity> findUserByUsername(String username);
+
+  Mono<SignedInUser> createUser(Mono<User> userMono);
+
+  Mono<SignedInUser> getSignedInUser(UserEntity userEntity);
+
+  Mono<SignedInUser> signIn(Mono<SignInReq> signInReqMono);
+
+  Mono<SignedInUser> getAccessToken(Mono<RefreshToken> refreshTokenMono);
+
+  Mono<Void> removeRefreshToken(Mono<RefreshToken> refreshTokenMono);
 }
